[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perf-lens"
version = "0.1.0"
description = "An intelligent CLI wrapper for C++ performance analysis on Linux"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["performance", "profiling", "valgrind", "perf", "flamegraph", "c++"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
perf-lens = "perf_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["perf_lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
